--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,25 @@
 body{
-    background-image: cross-fade();
+    /* background-image: cross-fade(); */
 }
 .m-container{
     margin-top: 10px !important;
     width: 400px;
     height: 800px;
-    /* background-color: rgba(0, 0, 139, 0.288); */
     background-color:black;
-    /* padding: 2% 2% 10% 2%; */
-    padding: 2%;
-    border-radius: 10px
+    padding: 1% 1.3% 3% 0.9%;
+    border-radius: 40px
 
 }
-/* .bodyContainer{
-    pad
-} */
+
+.btn-container{
+    display: flex;
+    flex-direction: row;
+    border: 1px solid white;
+    margin: 0 5px;
+    align-items: center;
+    justify-content: center;
+}
+
 #scrN{
     height: 34%;
     width: 100%;
@@ -64,11 +69,17 @@ body{
     top: 9%;
     font-weight: 650;
     color: #fff !important;
+    margin: 0 4px 0 4px;
 }
 .divmag{
     margin-top: -8%;
     margin-left: 1%;
     margin-bottom: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+
 }
 .ti{
     text-align: center;
