--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
 body{
-    /* background-image: cross-fade(); */
+    background: #eff1ff;
 }
 .m-container{
-    margin-top: 10px !important;
     width: 400px;
     height: 800px;
-    background-color:black;
-    padding: 1% 1.3% 3% 0.9%;
-    border-radius: 40px
+    padding: 30px 35px 35px;
+    margin: auto;
+    margin: 4% auto;
+    border-radius: 35px;
+    background: #ECF0F3;
+    box-shadow: 13px 13px 20px  #5555,
+                -13px 13px 20px #CBCED8
 
 }
 
