--- a/styles.css
+++ b/styles.css
@@ -1,116 +1,39 @@
-body{
-    background: #eff1ff;
-}
-.m-container{
-    width: 400px;
+.display-container{
+    border: 2px solid black;
+    /* width: fit-content;
+    height: fit-content; */
     height: 800px;
-    padding: 30px 35px 35px;
+    width: 350px;
     margin: auto;
-    margin: 4% auto;
-    border-radius: 35px;
-    background: #ECF0F3;
-    box-shadow: 13px 13px 20px  #5555,
-                -13px 13px 20px #CBCED8
-
+    margin-top: 20px;
+    border-radius: 30px;
+    padding: 2px;
 }
 
-.btn-container{
-    display: flex;
-    flex-direction: row;
-    border: 1px solid white;
-    margin: 0 5px;
-    align-items: center;
-    justify-content: center;
+.display-exp{
+    background-color: green;
+    height: 300px ;
+    width: 350px;
+    padding: 4% 0 0 0;
+    margin-bottom: -10px;
+    border-radius: 30px;
 }
-
-#scrN{
-    height: 34%;
-    width: 100%;
-    padding: 5%;
-    font-size: 3.5rem;
-    font-weight: 200;
-    margin-top: 2%;
-    border-radius: 20px;
-    /* border: solid #afad5a; */
-    border: solid #fff;
-    border-bottom: 1px solid #fff;
-    background-color: white;
-    text-align: end;
-}
-
-#scrN2{
-    height: 6%;
-    width: 92%;
-    border: 1px;
-    border-radius: 20px;
-    padding: 2%;
+.expression{
+    height: 45%;
+    width: 98%;
+    margin-top: 8%;
+    background-color: aqua;
     font-size: 2rem;
-    font-weight: 200;
-    position: relative;
-    bottom: 50px;
-    left: 8px;
-    text-align: right;
-    margin-right: 1%;
-    background-color: white;
-}
-#scrN:hover{
-    border:1px solid #243441;
-}
-.scrN2:hover{
-    border: 1px solid #243441;
-    
+    border-radius: 15px;
 }
 
-.sub-container{
-    height: screen;
+.display-ans .answer{
+    width: 98%;
+    height: 30%;
+    margin-top: -20spx;
+    background-color: blueviolet;
+    font-size: 3rem;
+    color: white;
+    border-radius: 15px;
 }
 
-.btn{
-    border:2px solid #000;
-    box-shadow: 0 1px 1px black;
-    position: relative;
-    top: 9%;
-    font-weight: 650;
-    color: #fff !important;
-    margin: 0 4px 0 4px;
-}
-.divmag{
-    margin-top: -8%;
-    margin-left: 1%;
-    margin-bottom: 1%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: center;
-
-}
-.ti{
-    text-align: center;
-    padding: 1px 4px;
-    margin: 1px;
-}
-.fkeys{
-    /* box-shadow:0 1px 1px; */
-    background-color: #243441;
-    /* color: rgba(206, 101, 4, 0.733); */
-    /* color: #fff !important; */
-    border:2px solid #243441;
-    box-shadow: 0 5px 5px #243441;
-    padding: 1%;
-}
-.fkeys:hover{
-    box-shadow: 0 1px 1px #243441;
-    background-color: rgba(206, 101, 4, 0.733);
-    color: #000;
-}
-
-.fkeys-e{
-    background-color:rgba(206, 101, 4, 0.733) ;
-    color:#fff ;
-    font-size: 1.2rem;
-    box-shadow: 0 1px 1px rgba(206, 101, 4, 0.733);
-}
-.fkeys-e:hover {
-    background-color: rgba(206, 101, 4, 0.733);
-    color: #1C1C1C;
-}
