--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .display-container{
-    border: 2px solid black;
+    border: 2px solid  #C7E2F6;
     /* width: fit-content;
     height: fit-content; */
     height: 800px;
@@ -7,14 +7,15 @@
     margin: auto;
     margin-top: 20px;
     border-radius: 30px;
-    padding: 2px;
-    border: 1px solid black;
+    padding: 4px;
+    border: 1px solid  #C7E2F6;
+    background-color: #EAF6F6;
     box-shadow: 13px 13px 20px  #5555,
                 -13px 13px 20px #CBCED8
        
 }
 .contain-all{
-    border: 1px solid black;
+    border: 2px solid #EAF6F6;
     border-radius: 30px;
 }
 
@@ -31,46 +32,55 @@
     height: 45%;
     width: 98%;
     margin-top: 8%;
-    /* background-color: aqua; */
+    color: #7D7D7D;
+    background-color: white;
     border: none;
     outline: none;
     font-size: 2rem;
     border-radius: 15px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     padding: 2px 3px;
+    box-shadow : 2px 2px 2px 0 #EAF6F6, inset -2px -2px 8px #C7E2F6;
 }
 
 .display-ans .answer{
     width: calc(97% - 10px);
     height: 30%;
-    margin-top: -20spx;
+    margin-top: -10px;
     /* background-color: blueviolet; */
     border: none;
     outline: none;
     font-size: 2.2rem;
-    color: white;
+    background-color: white;
     border-radius: 15px;
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
     padding: 10px;
     text-align: right;
+    box-shadow : 2px 2px 2px 0 #EAF6F6, inset -2px -2px 8px #C7E2F6;
 }
 .button-div{
     display: grid;
+    padding:3px;
     grid-template-columns: repeat(1, 1fr);
-    margin-top: 10px;
-    border: 2px solid red;
+    margin-top: -15px;
+    /* border: 2px solid red; */
     align-items: center;
     border-radius: 30px;
+    box-shadow: 7px 7px 10px #EAF6F6, -7px -7px 10px #a8d1df79
 }
 .function-keys, .math-functions, .digits, .special-keys{
     display: flex;
     padding-left: 13px;
+    
     
 }
 .function-keys button, .math-functions button, .digits button, .special-keys button{
     height: 60px;
     width: 60px;
     font-size: 20px;
-    margin: 10px;
-    
+    margin: 10px;    
 }
 
 .decimal{
@@ -79,14 +89,16 @@
 }
 
 button{
+    color: #001aaf;
     background-color: #fff;
     border: gray;
-      box-shadow: 12px 12px 24px 0 rgba(0, 0, 0, 0.2),
-    -12px -12px 24px 0 rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    box-shadow:  6px 6px 12px 0 #5555,
+    -6px -6px 12px 0 #CBCED8;
 }
 
+
 button:active{
-      box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
-    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
 }
 
